fixed overflowing of footer

--- a/sass/restaurants_styles.scss
+++ b/sass/restaurants_styles.scss
@@ -527,7 +527,7 @@ footer {
         // FOOTER block
         footer {
             width: 100%;
-            padding: 65px 30px 30px 0; 
+            padding: 65px 0 30px 0; 
             display: flex;
             flex-direction: row-reverse;
             
