--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -563,7 +563,7 @@ body {
 
         // FOOTER block
         footer {
-            padding: 65px 30px 30px 0; 
+            padding: 65px 0 30px 0; 
             display: flex;
             flex-direction: row-reverse;
             
